manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
  labels:
    name: seccamp-2023
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-app
  template:
    metadata:
      labels:
        app: deployment-app
    spec:
      containers:
      - name: app
        image: fum1h1to/seccamp-2023-b3:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-app
spec:
  selector:
    app: deployment-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
