manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-postgres
  labels:
    name: seccamp-2023
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-postgres
  template:
    metadata:
      labels:
        app: deployment-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15.3
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-initdb
        configMap: 
          name: postgres-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
spec:
  selector:
    app: deployment-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
